Updated finding texture strike point